--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,56 @@
-<html>
-        <head>
-        </head>
+{% extends "base.html" %}
+{% block body %}
+    
+    <div class='container mt-3 col-12'>
+        <div class='row'>
+            <img  class='rounded mx-auto d-block col-6' alt='Артур Шопенгауэр' src='http://www.izbrannoe.com/upload/resize_cache/iblock/98c/705_391_2/98c13dcb42bf7427cef55b1c16771529.jpg'>
+        </div>
 
-        <body>
-                <div id='heading'><h2>Contest list</h2></div>
-                <div id='contest-list'>
-                {% for contest in active_contests %}
-                <div class='contes-banner'>
-                <a href='/contest/{{ contest.id }}'>
-                        {{ contest.first_girl.name }} VS {{ contest.second_girl.name }} </br>
-                        until the {{ contest.end }}
-                </a>
+        <div class='row'>  
+            <div class='container center-block'>
+                <blockquote class="blockquote text-center">
+                <p class="mb-0">Низкорослый, узкоплечий, широкобедрый пол мог назвать прекрасным только отуманенный половым побуждением рассудок мужчины: вся его красота и кроется в этом побуждении.</p>
+                <footer class="blockquote-footer"><cite>Артур Шопенгауэр - убеждённый женоненавистник</cite></footer>
+                </blockquote>
+            </div>
+        </div>
+
+        <div class='row col-6 mt-5 mx-auto justify-content-center'>
+            <h1>Актуальные соревнования:</h1>
+        </div>
+        <div class='row col-8 mx-auto align-item-center border bg-light mt-3'>
+                <div class='col-4 float-left text-center'>
+                    <img class='rounded img-fluid pt-3' src='https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fv.img.com.ua%2Fb%2F1100x999999%2F5%2Fed%2Fefbc4030586f964def135ca78401ced5.jpg&f=1'>
+                    <h6>Юлия Тимошенко</h6>
                 </div>
-                </br>
-                {% endfor %}
+
+                <div class='col-4 mx-auto center-text text-center mt-3'>
+                        <div><button type='button' class='btn btn-dark btn-block'>Vote!</button></div>
+                        <h4>До конца голосования: 13:45:61</h4>
                 </div>
-        </body>
-</html>
+
+                <div class='col-4 float-right text-center'>
+                    <img class='rounded img-fluid pt-3' src='https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fv.img.com.ua%2Fb%2F1100x999999%2F5%2Fed%2Fefbc4030586f964def135ca78401ced5.jpg&f=1'>
+                    <h6>Юлия Тимошенко</h6>
+                </div>
+        </div>
+
+        <div class='row col-8 mx-auto align-item-center border bg-light mt-3'>
+                <div class='col-4 float-left text-center'>
+                    <img class='rounded img-fluid pt-3' src='https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fv.img.com.ua%2Fb%2F1100x999999%2F5%2Fed%2Fefbc4030586f964def135ca78401ced5.jpg&f=1'>
+                    <h6>Юлия Тимошенко</h6>
+                </div>
+
+                <div class='col-4 mx-auto center-text text-center mt-3'>
+                        <div><button type='button' class='btn btn-dark btn-block'>Vote!</button></div>
+                        <h4>До конца голосования: 13:45:61</h4>
+                </div>
+
+                <div class='col-4 float-right text-center'>
+                    <img class='rounded img-fluid pt-3' src='https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fv.img.com.ua%2Fb%2F1100x999999%2F5%2Fed%2Fefbc4030586f964def135ca78401ced5.jpg&f=1'>
+                    <h6>Юлия Тимошенко</h6>
+                </div>
+        </div>
+
+    </div>
+{% endblock %}
