Make rating template

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <div class='container center-block'>
                 <blockquote class="blockquote text-center">
                 <p class="mb-0">Низкорослый, узкоплечий, широкобедрый пол мог назвать прекрасным только отуманенный половым побуждением рассудок мужчины: вся его красота и кроется в этом побуждении.</p>
-                <footer class="blockquote-footer"><cite>Артур Шопенгауэр - убеждённый женоненавистник</cite></footer>
+                <footer class="blockquote-footer"><cite>Артур Шопенгауэр, убеждённый женоненавистник</cite></footer>
                 </blockquote>
             </div>
         </div>
