--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Chanvoter</a>
+  <a class="navbar-brand" href="/">Chanvoter</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -24,11 +24,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Главная<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Главная<span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item active">
-        <a class="nav-link" href="#">Рейтинг<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/rating">Рейтинг<span class="sr-only">(current)</span></a>
       </li>
     </ul>
 
