--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -6,7 +6,7 @@
         <img  class='rounded mx-auto d-block col-6' alt='Артур Шопенгауэр' src='http://www.cablook.com/wp-content/uploads/2016/04/sade.jpg'>
     </div>
 
-    <div class='row'>  
+    <div class='row mb-4'>  
         <div class='container center-block'>
             <blockquote class="blockquote text-center">
                 <p class="mb-0">Там, где люди будут равными, где не будет существовать различий, - никогда не будет существовать счастья.</p>
@@ -20,38 +20,32 @@
     <input type='hidden' name='contest_id' value={{ contest_id }} \>
     <input type='hidden' id='chosen_id' name='chosen_id' \>
 
-    <div class='card-deck mb-3 text-center'>
-    <div id='first-girl' class='card mb-4 shadow-sm'  onclick='document.getElementById("chosen_id").value={{ first_girl.id }}; this.parentNode.submit()'>
-            <div class='card-header'>
-                    <h4 class='my-0 font-weight-normal'> {{ first_girl.name }}</h4>
-            </div>
+    <div class='card-deck text-center mb-3'>
+        <div class='card'>
+            <img src="{{ first_girl.photo }}" class="card-img-top" alt="...">
 
-            <div class='card-body'>
-                instagram widget will use this URL: {{ first_girl.instagram }}
-                this url of profile image: Nothing, nevermind 
-            </div> 
+            <div class='card-footer'>
+                {{ first_girl.name }}
+            </div>
+        </div>
+
+        <div class='card'>
+            <img src="{{ second_girl.photo }}" class="card-img-top" alt="...">
+
+            <div class='card-footer'>
+                {{ second_girl.name }}
+            </div>
+        </div>
     </div>
 
-    <div id='second-girl' class='card mb-4 shadow-sm'  onclick='{document.getElementById("chosen_id").value={{ second_girl.id }}; this.parentNode.submit()}'>
-            <div class='card-header'>
-                    <h4 class='my-0 font-weight-normal'>{{ second_girl.name }}</h4>
-            </div>
-
-            <div class='card-body'>
-                instagram widget will use this URL: {{ second_girl.instagram }}
-            </div>
-
-            <div>
-                this url of profile image: Nothing, nevermind 
-            </div>
-    </div>
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">></span>
+        </div>
+        <input name='private_key' type="text" class="form-control" placeholder="Your private key">
     </div>
 
-    <div class='row'>
-    <p>ur ptivate key:  </p>
-    <input type="text" name="private_key">
-    </div>
-    <!-- </form>
+    </form>
 
 </div>
 {% endblock %}
