--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -1,13 +1,18 @@
 {% extends "base.html.j2" %}
-{% block body %}
 
+{% block head %}
+    {{ super() }}
+    <script type='text/javascript' src='/resources/scripts/index.js'></script>
+{% endblock %}
+
+{% block body %}
     <div class='jumbotron'>
         <div class='row'>
             <img  class='rounded mx-auto d-block col-6' src='http://www.izbrannoe.com/upload/resize_cache/iblock/98c/705_391_2/98c13dcb42bf7427cef55b1c16771529.jpg'>
         </div>
 
-        <div class='row justify-content-md-center'>  
-            <div class='center-block col-8'>
+        <div class='row'>  
+            <div class='center-block col-8 mx-auto'>
                 <blockquote class="blockquote text-center">
                 <p class="mb-0">Низкорослый, узкоплечий, широкобедрый пол мог назвать прекрасным только отуманенный половым побуждением рассудок мужчины: вся его красота и кроется в этом побуждении.</p>
                 <footer class="blockquote-footer"><cite>Артур Шопенгауэр, убеждённый женоненавистник</cite></footer>
@@ -21,30 +26,32 @@
     </div>
 
     {% for contest in active_contests %}
-    <div class='row mb-3'>  
-        <div class='card-deck col-8 mx-auto'>
-            <div class='card center-text'>
+
+    <div class='row mt-4'>  
+        <div class='card-deck col-8 mx-auto pb-4 pt-4 bg-light'>
+
+            <div class='card border-dark'>
                 <img src="{{ contest.first_girl.photo }}" class="card-img-top">
-                <div class='card-footer'>{{ contest.first_girl.name }}</div>
+                <div class='card-footer text-center'>{{ contest.first_girl.name }}</div>
             </div>
             
-            <div class='card text-center text-white bg-secondary'>
+            <div class='card text-center border-dark'>
                 <div class='card-header'>
                     Сорвенование {{ contest.id }} 
                 </div>
 
                 <div class='card-body'>
-                    <a class='btn btn-lg btn-primary'>Голосовать!</a>
+                    <a href='/contest/{{ contest.id }}' class='btn btn-lg btn-primary'>Голосовать!</a>
                     
                     <div class='card-text mt-3'>
-                        До конца соревнования осталось столько-то времени...
+                        До конца соревнования осталось <span class='countdown' endtime='{{ contest.end }}'></span>
                     </div>
                 </div>
             </div>            
 
-            <div class='card center-text'>
+            <div class='card border-dark'>
                 <img src="{{ contest.second_girl.photo }}" class="card-img-top">
-                <div class='card-footer'>{{ contest.second_girl.name }}</div>
+                <div class='card-footer text-center'>{{ contest.second_girl.name }}</div>
             </div>
         </div>
     </div>
