--- a/templates/rating.html.j2
+++ b/templates/rating.html.j2
@@ -1,24 +1,26 @@
 {% extends "base.html.j2" %}
 {% block body %}
-<div class='container mt-3'>    
+
+    <div class='jumbotron'>
         <div class='row'>
-            <img  class='rounded mx-auto img-fluid d-block col-6' alt='Артур Шопенгауэр' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
+            <img  class='rounded mx-auto d-block col-6' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
         </div>
 
         <div class='row'>  
-            <div class='container center-block'>
+            <div class='center-block col-8 mx-auto'>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Что падает, то нужно ещё толкнуть.</p>
-                <footer class="blockquote-footer"><cite>Фридрих Ницше</cite></footer>
+                    <footer class="blockquote-footer"><cite>Фридрих Ницше</cite></footer>
                 </blockquote>
             </div>
         </div>
+    </div>
 
     <div class='row col-8 mt-5 mx-auto justify-content-center'>
         <h1>Рейтинг</h1>
     </div>
 
-    <table class='table'>
+    <table class='table pb-5'>
         <thead>
             <th scope="col">#</th>
             <th scope="col">Имя</th>
@@ -37,5 +39,4 @@
             {% endfor %}
         </tbody>
     </table>
-</div>
 {% endblock %}
