--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -30,6 +30,10 @@
       <li class="nav-item active">
         <a class="nav-link" href="/rating">Рейтинг<span class="sr-only">(current)</span></a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="/admin">Панель админа<span class="sr-only">(current)</span></a>
+      </li>
     </ul>
 
     <!--
