--- a/templates/admin.html.j2
+++ b/templates/admin.html.j2
@@ -1,7 +1,9 @@
 {% extends "base.html.j2" %}
 
 {% block body %}
-    <div class='jumbotron'>
+
+<div class='container'>
+    <div class='jumbotron mt-5'>
         <h1 class="display-4">Active contests</h1>
         <table class='table'>
             <thead>
@@ -22,7 +24,7 @@
                     <td>{{ contest.second_girl.id }}</td>
                     <td>{{ contest.begin }}</td>
                     <td>{{ contest.end }}</td>
-                    <td><a class='btn btn-primary' href='/finish_contest/{{ contest.id }}'>End & Recalc ELO</a></td>
+                    <td><a class='btn btn-primary' href='/finish_contest/{{ contest.id }}'>закончить и пересчитать ELO</a></td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -47,7 +49,7 @@
                     <td>{{ user.address }}</td>
                     <td>{{ user.private_key }}</td>
                     <td>{{ user.coins }}</td>
-                    <td><a class='btn btn-primary'>Watch sth...</a></td>
+                    <td><a class='btn btn-primary' href='#'>Watch sth...</a></td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -72,10 +74,11 @@
                     <td>{{ girl.name }}</td>
                     <td>{{ girl.instagram }}</td>
                     <td>{{ girl.ELO }}</td>
-                    <td><a class='btn btn-primary'>Watch sth...</a></td>
+                    <td><a class='btn btn-primary' href='#'>Watch sth...</a></td>
                 </tr>
             {% endfor %}
             </tbody>
         </table> 
     </div>
+</div>
 {% endblock %}
