--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -64,4 +64,65 @@
         </div>
     </div>
 
+    <!-- Alerts form r there -->
+
+    <div class="modal" tabindex="-1" role="dialog" id='success-alert'>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Ваш голос успешно отправлен в обработку.</p>
+          </div>
+          <div class="modal-footer">
+            <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id='wrong-key-alert'>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Ошибка</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Вы ввели некорретный приватный ключ.</p>
+          </div>
+          <div class="modal-footer">
+            <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id='extra-vote-alert'>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Ошибка</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Вы уже голосовали.</p>
+          </div>
+          <div class="modal-footer">
+            <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
