--- a/templates/admin.html.j2
+++ b/templates/admin.html.j2
@@ -30,6 +30,31 @@
             </tbody>
         </table> 
     </div>
+    <div class='jumbotron mt-5'>
+        <h1 class="display-4">Vote contests</h1>
+        <table class='table'>
+            <thead>
+                <tr>
+                    <th scope='col'>id</th>
+                    <th scope='col'>first_girl_id</th>
+                    <th scope='col'>second_girl_id</th>
+                    <th scope='col'>begin</th>
+                    <th scope='col'>end</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for contest in vote_contests  %}
+                <tr>
+                    <td>{{ contest.id }}</td>
+                    <td>{{ contest.first_girl.id }}</td>
+                    <td>{{ contest.second_girl.id }}</td>
+                    <td>{{ contest.begin }}</td>
+                    <td>{{ contest.end }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table> 
+    </div>
     <div class='jumbotron'>
         <h1 class="display-4">Users</h1>
         <table class='table'>
@@ -39,7 +64,6 @@
                     <th scope='col'>name</th>
                     <th scope='col'>private_key</th>
                     <th scope='col'>coins</th>
-                    <th scope='col'>#</th>
                 </tr>
             </thead>
             <tbody>
@@ -49,7 +73,6 @@
                     <td>{{ user.address }}</td>
                     <td>{{ user.private_key }}</td>
                     <td>{{ user.coins }}</td>
-                    <td><a class='btn btn-primary' href='#'>Watch sth...</a></td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -64,7 +87,6 @@
                     <th scope='col'>name</th>
                     <th scope='col'>instagram</th>
                     <th scope='col'>ELO</th>
-                    <th scope='col'>#</th>
                 </tr>
             </thead>
             <tbody>
@@ -74,7 +96,6 @@
                     <td>{{ girl.name }}</td>
                     <td>{{ girl.instagram }}</td>
                     <td>{{ girl.ELO }}</td>
-                    <td><a class='btn btn-primary' href='#'>Watch sth...</a></td>
                 </tr>
             {% endfor %}
             </tbody>
