Fix bug with ELO rounding

--- a/templates/rating.html.j2
+++ b/templates/rating.html.j2
@@ -34,7 +34,7 @@
             <th scope='row'>{{ girl.rating }}</th>
             <td>{{ girl.name }}</td>
             <td><a href='http://www.instagram.com/{{ girl.instagram }}'>{{ girl.instagram }}</a>
-            <td>{{ girl.ELO }}</td>
+            <td>{{ girl.ELO_rounded }}</td>
             </tr>
             {% endfor %}
         </tbody>
