Provide display of bet-contests

--- a/templates/admin.html.j2
+++ b/templates/admin.html.j2
@@ -43,7 +43,7 @@
                 </tr>
             </thead>
             <tbody>
-            {% for contest in vote_contests  %}
+            {% for contest in bet_contests  %}
                 <tr>
                     <td>{{ contest.id }}</td>
                     <td>{{ contest.first_girl.id }}</td>
