Add bet page template.

--- a/bet.html.j2
+++ b/bet.html.j2
@@ -7,10 +7,10 @@
     <script type='text/javascript'>
         FIRST_GIRL_ID = {{ first_girl.id }} 
         SECOND_GIRL_ID = {{ second_girl.id }}
-        CONTEST_ID = {{ contest_id }}
+        CONTEST_ID = {{ contest.id }}
     </script>
     
-    <script type='text/javascript' src='/resources/scripts/bet.js'></script>
+    <script type='text/javascript' src='/resources/scripts/contest.js'></script>
 
 {% endblock %}
 
@@ -54,6 +54,7 @@
             </div>
         </div>
     </div>
+
     <div class='row'>
         <div class="input-group mt-3 pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
