--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -28,7 +28,15 @@
       </li>
 
       <li class="nav-item active">
+        <a class="nav-link" href="/about">О Нас<span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item active">
         <a class="nav-link" href="/rating">Рейтинг<span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="/profile">Профиль<span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item active">
