--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class='card-body'>
-                    <a href='/contest/{{ contest.id }}' class='btn btn-lg btn-primary'>Ставка!</a>
+                    <a href='/bet/{{ contest.id }}' class='btn btn-lg btn-primary'>Ставка!</a>
                     
                     <div class='card-text mt-3'>
                         До начала соревнований осталось <span class='waiting-countdown' begintime='{{ contest.begin.isoformat() }}'></span>
