Do sth lmao idk ty u al1.

--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -11,7 +11,7 @@
         CONTEST_ID = {{ contest.id }}
     </script>
     
-    <script type='text/javascript' src='/resources/scripts/contest.js'></script>
+    <script type='text/javascript' src='/resources/scripts/bet.js'></script>
 
 {% endblock %}
 
