--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -19,21 +19,21 @@
 
     <div class='jumbotron'>
         <div class='row'>
-            <img  class='rounded mx-auto d-block col-6' src='http://www.cablook.com/wp-content/uploads/2016/04/sade.jpg'>
+            <img  class='rounded mx-auto d-block col-6' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
         </div>
 
         <div class='row'>  
             <div class='center-block col-8 mx-auto'>
                 <blockquote class="blockquote text-center">
-                    <p class="mb-0">Там, где люди будут равными, где не будет существовать различий, - никогда не будет существовать счастья.</p>
-                    <footer class="blockquote-footer"><cite>Маркиз Де Сад, первый садист</cite></footer>
+                    <p class="mb-0">Двух вещей хочет настоящий мужчина: опасности и игры. И потому он ищет женщину, как самую опасную игрушку.</p>
+                    <footer class="blockquote-footer"><cite>Фридрих Ницше</cite></footer>
                 </blockquote>
             </div>
         </div>
     </div>
 
     <div class='row col-6 mx-auto justify-content-center'>
-        <h1 class='mt-5'>Актуальные соревнования:</h1>
+        <h1 class='mt-5'>Ставки</h1>
     </div>
 
     <div class='row'>
@@ -42,7 +42,7 @@
                 <img src="{{ first_girl.photo }}" class="card-img-top" alt="...">
 
                 <div class='card-footer'>
-                    {{ first_girl.name }} (x {{ (1 / contest.first_girl_win_chance) | round(2) }})
+                    {{ first_girl.name }} (x {{ k1 }})
                 </div>
             </div>
 
@@ -50,7 +50,7 @@
                 <img src="{{ second_girl.photo }}" class="card-img-top" alt="...">
 
                 <div class='card-footer'>
-                    {{ second_girl.name }} (x {{ (1 / (1 - contest.first_girl_win_chance)) | round(2) }})
+                    {{ second_girl.name }} (x {{ k2 }})
                 </div>
             </div>
         </div>
@@ -58,8 +58,19 @@
 
     <div class="row mt-2">
         <div class="progress col-8 mx-auto">
-            <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: {{ contest.first_girl_win_chance * 100 }}%"></div>
-            <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{ (1 - contest.first_girl_win_chance) * 100 }}%"></div>
+        {% if k1 == 'Nan' and k2 == 'Nan' %} 
+            <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+            <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+        {% elif k1 == 'Nan' %}
+            <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 1%"></div>
+            <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 99%"></div>
+        {% elif k2 == 'Nan' %} 
+            <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 99%"></div>
+            <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 1%"></div>
+        {% elif True  %}
+            <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: {{ 100 * k2 / (k1 + k2) }}%"></div>
+            <div class="progress-bar bg-success" role="progressbar" saria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{ 100 * k1 / (k1 + k2) }}%"></div>
+        {% endif %}
         </div>
     </div>
 
@@ -78,7 +89,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"> $ </span>
             </div>
-            <input id='private-key' type="text" class="form-control" placeholder="Сумма ставки">
+            <input id='coins' type="text" class="form-control" placeholder="Сумма ставки">
         </div>
     </div>
 
@@ -93,7 +104,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Ваш голос успешно отправлен в обработку.</p>
+            <p>Ваша ставка успешно отправлена в обработку.</p>
           </div>
           <div class="modal-footer">
             <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
@@ -133,7 +144,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Вы уже голосовали.</p>
+            <p>Вы уже сделали ставку.</p>
           </div>
           <div class="modal-footer">
             <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
@@ -143,4 +154,43 @@
       </div>
     </div>
 
+    <div class="modal" tabindex="-1" role="dialog" id='less-money-alert'>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Ошибка</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>У вас не хватает денег.</p>
+          </div>
+          <div class="modal-footer">
+            <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id='wrong-coins-alert'>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Ошибка</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Вы ввели некорректную сумму ставки.</p>
+          </div>
+          <div class="modal-footer">
+            <a class='btn btn-primary' class='btn btn-primary' href='/'>На главную</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+    </div>
 {% endblock %}
