Make few small design changes

--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -10,7 +10,7 @@
         CONTEST_ID = {{ contest_id }}
     </script>
     
-    <script type='text/javascript' src='/resources/scripts/bet.js'></script>
+    <script type='text/javascript' src='/resources/scripts/contest.js'></script>
 
 {% endblock %}
 
@@ -32,7 +32,7 @@
     </div>
 
     <div class='row col-6 mx-auto justify-content-center'>
-        <h1 class='mt-5'>Актуальные соревнования:</h1>
+        <h1 class='mt-5'>Соревнование</h1>
     </div>
 
     <div class='row'>
@@ -59,7 +59,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"> > </span>
             </div>
-            <input id='private-key' type="text" class="form-control" placeholder="Your private key">
+            <input id='private-key' type="text" class="form-control" placeholder="Ваш приватный ключ">
         </div>
     </div>
 
