--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -12,7 +12,7 @@
     </script>
     
     <script type='text/javascript' src='/resources/scripts/bet.js'></script>
-
+    <link rel='stylesheet' type='text/css' href='/resources/styles/op-img.css'>
 {% endblock %}
 
 {% block body %}
@@ -39,7 +39,10 @@
     <div class='row'>
         <div class='card-deck text-center mt-3 col-8 mx-auto'>
             <div class='card' id='first-girl-card'>
-                <img src="{{ first_girl.photo }}" class="card-img-top" alt="...">
+                <div class='op-container'>
+                    <img src="{{ first_girl.photo }}" class="card-img-top op-image" alt="...">
+                    <div class='op-middle bg-secondary text-white pl-1 pr-1'><h2>Нажмите чтобы сделать ставку</h2></div>
+                </div>
 
                 <div class='card-footer'>
                     {{ first_girl.name }} (x {{ k1 }})
@@ -47,7 +50,10 @@
             </div>
 
             <div class='card' id='second-girl-card'>
-                <img src="{{ second_girl.photo }}" class="card-img-top" alt="...">
+                <div class='op-container'>
+                    <img src="{{ second_girl.photo }}" class="card-img-top op-image" alt="...">
+                    <div class='op-middle bg-secondary text-white pl-1 pr-1'><h2>Нажмите чтобы сделать ставку</h2></div>
+                </div>
 
                 <div class='card-footer'>
                     {{ second_girl.name }} (x {{ k2 }})
