Improve movile layout

--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -18,11 +18,13 @@
 
     <div class='jumbotron'>
         <div class='row'>
-            <img  class='rounded mx-auto d-block col-6' src='http://www.cablook.com/wp-content/uploads/2016/04/sade.jpg'>
+            <div class='img-wrapper col-lg-6 col-sm-12 d-block mx-auto'>
+                <img  class='img rounded' style='width: 100%; height: auto;' src='http://www.cablook.com/wp-content/uploads/2016/04/sade.jpg'>
+            </div>
         </div>
 
-        <div class='row'>  
-            <div class='center-block col-8 mx-auto'>
+        <div class='row mt-2'>  
+            <div class='center-block col-sm-12 col-lg-8 mx-auto'>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Там, где люди будут равными, где не будет существовать различий, - никогда не будет существовать счастья.</p>
                     <footer class="blockquote-footer"><cite>Маркиз Де Сад, первый садист</cite></footer>
@@ -35,7 +37,7 @@
         <h1 class='mt-5'>Соревнование</h1>
     </div>
 
-    <div class='row'>
+    <div class='row col-12'>
         <div class='card-deck text-center mt-3 col-8 mx-auto'>
             <div class='card' id='first-girl-card'>
                 <div class='op-container'>
@@ -59,7 +61,7 @@
             </div>
         </div>
     </div>
-    <div class='row'>
+    <div class='row col-12'>
         <div class="input-group mt-3 pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"> > </span>
