--- a/templates/rating.html.j2
+++ b/templates/rating.html.j2
@@ -3,11 +3,13 @@
 
     <div class='jumbotron'>
         <div class='row'>
-            <img  class='rounded mx-auto d-block col-6' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
+            <div class='img-wrapper col-lg-6 col-sm-12 d-block mx-auto'>
+                <img  class='img rounded' style='width: 100%; height: auto;' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
+            </div>
         </div>
 
-        <div class='row'>  
-            <div class='center-block col-8 mx-auto'>
+        <div class='row mt-2'>  
+            <div class='center-block col-lg-8 col-sm-12 mx-auto'>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Что падает, то нужно ещё толкнуть.</p>
                     <footer class="blockquote-footer"><cite>Фридрих Ницше</cite></footer>
