--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -19,11 +19,13 @@
 
     <div class='jumbotron'>
         <div class='row'>
-            <img  class='rounded mx-auto d-block col-6' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
+            <div class='img-wrapper col-lg-6 col-sm-12 d-block mx-auto'>
+                <img  class='img rounded' style='width: 100%; height: auto;' src='https://germanexpert.ru/wp-content/uploads/2018/01/Friedrich-Wilhelm-Nietzsche-750x350.jpg'>
+            </div>
         </div>
 
-        <div class='row'>  
-            <div class='center-block col-8 mx-auto'>
+        <div class='row mt-2'>  
+            <div class='center-block col-lg-8 col-sm-12 mx-auto'>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Двух вещей хочет настоящий мужчина: опасности и игры. И потому он ищет женщину, как самую опасную игрушку.</p>
                     <footer class="blockquote-footer"><cite>Фридрих Ницше</cite></footer>
@@ -36,7 +38,7 @@
         <h1 class='mt-5'>Ставки</h1>
     </div>
 
-    <div class='row'>
+    <div class='row col-12'>
         <div class='card-deck text-center mt-3 col-8 mx-auto'>
             <div class='card' id='first-girl-card'>
                 <div class='op-container'>
@@ -62,7 +64,7 @@
         </div>
     </div>
 
-    <div class="row mt-2">
+    <div class="row mt-2 col-12">
         <div class="progress col-8 mx-auto">
         {% if k1 == 'Nan' and k2 == 'Nan' %} 
             <div class="progress-bar" role="progressbar" saria-valuenow="100"  aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
@@ -81,7 +83,7 @@
     </div>
 
 
-    <div class='row'>
+    <div class='row col-12'>
         <div class="input-group mt-3 pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"> > </span>
@@ -90,7 +92,7 @@
         </div>
     </div>
 
-    <div class='row'>
+    <div class='row col-12'>
         <div class="input-group pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"> $ </span>
