--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -11,6 +11,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script type='text/javascript' src='/resources/scripts/base.js'></script>
     {% endblock %}
 </head>
 
@@ -44,12 +46,10 @@
       </li>
     </ul>
 
-    <!--
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    -->
+    <div class="form-inline my-2 my-lg-0">
+        <input id='profile-form' type='text' class="form-control mr-sm-2" placeholder="Приватный ключ">
+        <a id='profile-btn' class="btn btn-outline-primary my-2 my-sm-0" type="submit">Профиль</a>
+    </div>
   </div>
 </nav>
     {% block body %}
