--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -9,6 +9,7 @@
         FIRST_GIRL_ID = {{ first_girl.id }} 
         SECOND_GIRL_ID = {{ second_girl.id }}
         CONTEST_ID = {{ contest.id }}
+        PRIVATE_KEY = {{ private_key }}
     </script>
     
     <script type='text/javascript' src='/resources/scripts/bet.js'></script>
