--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -8,6 +8,7 @@
         FIRST_GIRL_ID = {{ first_girl.id }} 
         SECOND_GIRL_ID = {{ second_girl.id }}
         CONTEST_ID = {{ contest_id }}
+        PRIVATE_KEY = {{ private_key }}
     </script>
     
     <script type='text/javascript' src='/resources/scripts/contest.js'></script>
