Make some small fixes

--- a/templates/admin_login.html.j2
+++ b/templates/admin_login.html.j2
@@ -9,10 +9,10 @@
 {% block body %}
     <div class='containter col-6 mx-auto mt-5 text-center'>
     <div class="form-group">
-        <label for="exampleInputPassword1">Докажите что вы админ :|</label>
+        <label for="exampleInputPassword1">Это страниц для админов.А ты точно админ? <label>
         <input id='key-form' type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    <button id='sumbit-btn' class="btn btn-primary col-4">Submit</button>
+    <button id='sumbit-btn' class="btn btn-primary col-6">Submit</button>
     </div>
 {% endblock %}
 
