--- a/templates/bet.html.j2
+++ b/templates/bet.html.j2
@@ -82,23 +82,22 @@
         {% endif %}
         </div>
     </div>
-
-
+    
     <div class='row col-12'>
         <div class="input-group mt-3 pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1"> > </span>
+                <span class="input-group-text" id="basic-addon1"> $ </span>
             </div>
-            <input id='private-key' type="text" class="form-control" placeholder="Ваш приватный ключ">
+            <input id='coins' type="text" class="form-control" placeholder="Сумма ставки">
         </div>
     </div>
 
     <div class='row col-12'>
         <div class="input-group pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1"> $ </span>
+                <span class="input-group-text" id="basic-addon1"> > </span>
             </div>
-            <input id='coins' type="text" class="form-control" placeholder="Сумма ставки">
+            <input id='private-key' type="password" class="form-control" placeholder="Ваш приватный ключ">
         </div>
     </div>
 
