--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -16,7 +16,7 @@
 
     <div class='border col-lg-6 col-sm-8 pb-3 pt-3 d-block mx-auto mt-4'>
         <div class='form-group'>
-            <input type='text' id='private-key-form' class='form-control' placeholder='Ваш приватный ключ'>
+            <input type='password' id='private-key-form' class='form-control' placeholder='Ваш приватный ключ'>
             <small class='form-text text-muted'>Никогда никому не говорите свой приватный ключ. Особенно девушкам...</small>
         </div>
         <button class='btn btn-primary' id='login-btn'>Авторизироваться!</button>
@@ -55,9 +55,9 @@
         </p>
 
         <ul class='text-left mt-3'>
-            <li>Учавствовать в ежедневных соревниваниях, решая для себя, как из двух данных девушек <b>вам</b> симпатична больше. Ваши голоса влияют на рейтинг, в основу которого положена щахматная система ELO.</li>
+            <li>Учавствовать в ежедневных соревнованиях, решая какая из двух данных девушек симпатична <b>вам</b> больше. Ваши голоса влияют на рейтинг, в основу которого положена щахматная система ELO.</li>
             <li>Делать ставки на то, какая из двух девушек станет более популярной, преумножить свой капитал на сайте. Для особо удачливых и расчетливых мы приготовили <b><font color='red'>П</font>риз</b>.</li>
-            <li>За бутылки пива и прочего алкоголя, купленые одному из админов, произвоить произвольные манипуляции с сайтом. Поднять кого-то в рейтинг, опустить etc.</li>     
+            <li>За бутылки пива и прочего алкоголя, купленые одному из админов, произвоить произвольные манипуляции с сайтом. Поднять кого-то в рейтинге, опустить etc.</li>     
             <li><s>Играть за зомби. Убивать зомби. Выпускать кишки 10 минут. Да сколько же у тебя кишок?!</s></li>
         </ul>
 
