--- a/templates/contest.html.j2
+++ b/templates/contest.html.j2
@@ -62,12 +62,13 @@
             </div>
         </div>
     </div>
+
     <div class='row col-12'>
         <div class="input-group mt-3 pb-3 col-8 mx-auto">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1"> > </span>
             </div>
-            <input id='private-key' type="text" class="form-control" placeholder="Ваш приватный ключ">
+            <input id='private-key' type="password" class="form-control" placeholder="Ваш приватный ключ">
         </div>
     </div>
 
