--- a/templates/admin.html.j2
+++ b/templates/admin.html.j2
@@ -24,14 +24,14 @@
                     <td>{{ contest.second_girl.id }}</td>
                     <td>{{ contest.begin }}</td>
                     <td>{{ contest.end }}</td>
-                    <td><a class='btn btn-primary' href='/finish_contest/{{ contest.id }}'>закончить и пересчитать ELO</a></td>
+                    <td><a class='btn btn-primary' href='/finish_contest/{{ contest.id }}'>Закончить и пересчитать ELO</a></td>
                 </tr>
             {% endfor %}
             </tbody>
         </table> 
     </div>
     <div class='jumbotron mt-5'>
-        <h1 class="display-4">Vote contests</h1>
+        <h1 class="display-4">Upcoming contests</h1>
         <table class='table'>
             <thead>
                 <tr>
