--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -28,11 +28,11 @@
         <hr class="my-4">
        
         <p class="h5">
-        Прежде чем запросить создание аккаунта, вам надо кое-что <b>Уяснить</b>:
+        Прежде чем запросить создание аккаунта, вам надо кое-что <b>уяснить</b>:
         </p>
 
         <ul class='text-left mt-3'>
-            <li>Убедитесь что вы не девушка. Девушки могут писать по ссылке ниже, не буду скрывать, я буду этому очень рад, но аккаунт я не дам.</li>
+            <li>Убедитесь, что вы не девушка. Девушки могут писать по ссылке ниже, не буду скрывать, я буду этому очень рад, но аккаунт я не дам.</li>
             <li>Вы не будете форсить этот сайт в женском окружении.</li>
             <li>Вы осознаете несерьезность этой затеи и не будете воспринимать что-либо на этом сайте близко к сердцу.</li>
         </ul>
@@ -45,17 +45,17 @@
 
     <div class='jumbotron mt-5 text-center'>
         <div class='display-4'>Что это вообще такое?</div>
-        <p class='lead'> - Филосовский вопрос.</p>
+        <p class='lead'> - Философский вопрос.</p>
         <hr class="my-4">
         <p class="h5">
-        Это сайт, который поможет ответить на вопрос, терзающий авторов уже почти год: Кто самая лучшая девочка тусовки <b>4527</b>?
+        Это сайт, который поможет ответить на вопрос, терзающий авторов уже почти год: Кто самая лучшая девочка тусовки <b>4527</b> (и не только)?
         </p>
         <p class="h5">
             Что тут можно?
         </p>
 
         <ul class='text-left mt-3'>
-            <li>Учавствовать в ежедневных соревнованиях, решая какая из двух данных девушек симпатична <b>вам</b> больше. Ваши голоса влияют на рейтинг, в основу которого положена щахматная система ELO.</li>
+            <li>Учавствовать в ежедневных соревнованиях, решая какая из двух данных девушек симпатична <b>вам</b> больше. Ваши голоса влияют на рейтинг, в основу которого положена шахматная система ELO.</li>
             <li>Делать ставки на то, какая из двух девушек станет более популярной, преумножить свой капитал на сайте. Для особо удачливых и расчетливых мы приготовили <b><font color='red'>П</font>риз</b>.</li>
             <li>За бутылки пива и прочего алкоголя, купленые одному из админов, произвоить произвольные манипуляции с сайтом. Поднять кого-то в рейтинге, опустить etc.</li>     
             <li><s>Играть за зомби. Убивать зомби. Выпускать кишки 10 минут. Да сколько же у тебя кишок?!</s></li>
