--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -95,7 +95,7 @@
                     <a href='/bet/{{ contest.id }}' class='btn btn-lg btn-primary'>Ставка!</a>
                     
                     <div class='card-text mt-3'>
-                        <h4>До начала соревнований осталось <span class='badge badge-primary waiting-countdown' begintime='{{ contest.begin.isoformat() }}'></span></h4>
+                        <h4>До начала соревнования осталось <span class='badge badge-primary waiting-countdown' begintime='{{ contest.begin.isoformat() }}'></span></h4>
                     </div>
                 </div>
             </div>            
